@@ -115,5 +115,21 @@ POLYGON EMPTY
   </op></test>
 </case>
 
+<case>
+  <desc>
+  	Degenerate polygon - ring is flat.
+  	This case tests a fix made in ver 1.12
+  </desc>
+  <a>
+    POLYGON ((100 100, 200 100, 200 100, 100 100))
+  </a>
+<test><op name='buffer' arg1='A' arg2='0.0'>   
+POLYGON EMPTY
+  </op></test>
+<test><op name='buffer' arg1='A' arg2='10.0'>   
+POLYGON ((100 90, 98.04909677983872 90.19214719596769, 96.1731656763491 90.76120467488714, 94.44429766980397 91.68530387697454, 92.92893218813452 92.92893218813452, 91.68530387697454 94.44429766980397, 90.76120467488713 96.1731656763491, 90.19214719596769 98.04909677983872, 90 100, 90.19214719596769 101.95090322016128, 90.76120467488713 103.8268343236509, 91.68530387697454 105.55570233019603, 92.92893218813452 107.07106781186548, 94.44429766980397 108.31469612302546, 96.1731656763491 109.23879532511287, 98.04909677983872 109.80785280403231, 100 110, 200 110, 201.95090322016128 109.80785280403231, 203.8268343236509 109.23879532511287, 205.55570233019603 108.31469612302546, 207.07106781186548 107.07106781186548, 208.31469612302544 105.55570233019603, 209.23879532511287 103.8268343236509, 209.8078528040323 101.95090322016128, 210 100, 209.8078528040323 98.04909677983872, 209.23879532511287 96.1731656763491, 208.31469612302544 94.44429766980397, 207.07106781186548 92.92893218813452, 205.55570233019603 91.68530387697454, 203.8268343236509 90.76120467488713, 201.95090322016128 90.19214719596769, 200 90, 100 90))
+  </op></test>
+</case>
+
 
 </run>
